# Omnidex

./: .gitignore  FinalProjectProposal.md  FinalProject_Proposal.md  README.md  biome.json  devlog.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  lib.rs  main.ts  types.ts
src-tauri/: Cargo.toml  fab_selectors.json  orbital_selectors.json  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: asset_commands.rs  mod.rs  orbital_commands.rs  scan_commands.rs  system_commands.rs
src-tauri/src/database/: database_manager.rs  mod.rs  orbital_helpers.rs
src-tauri/src/models/: app_setting.rs  asset.rs  asset_card.rs  asset_details.rs  mod.rs  scan_location.rs
src-tauri/src/orbital/: api.rs  api_models.rs  auth.rs  matching.rs  mod.rs  models.rs  scraper.rs
src-tauri/src/scanner/: mod.rs  utils.rs
src/assets/: main.css
src/components/: ActionBar.vue  AppButton.vue  AppFooter.vue  AppSelect.vue  AssetCard.vue  AssetCardSkeleton.vue  AssetDetail.vue  AssetGrid.vue  ConfirmationModal.vue  DeleteConfirmationModal.vue  DraggableDivider.vue  GlobalSearchInput.vue  InspectorPanel.vue  ManualMatchModal.vue  ModalDialog.vue  ModalManager.vue  NumberInput.vue  ScanProgress.vue  ScanStatusIndicator.vue  SettingsModal.vue  SkeletonLoader.vue  SlideshowModal.vue  SourceList.vue  StarRating.vue  TagPill.vue  TaggingModal.vue  ToggleSwitch.vue
src/database/: mod.rs
src/orbital/: matching.rs  scraper.rs
src/router/: index.ts
src/scanner/: mod.rs
src/stores/: assetGridStore.ts  assetStore.ts  databaseStore.ts  inspectorStore.ts  modalStore.ts  orbital.ts  scanLocationStore.ts  searchStore.ts  settingsStore.ts  sourceListStore.ts  statusBarStore.ts
src/types/: asset.ts  error.ts  index.ts
src/utils/: formatting.ts  mediaExtractor.ts  toast.ts
(+3 files in other folders)
