[package]
name = "omnidex"
version = "0.1.0"
description = "Omnidex - Local Asset Organizer for Unreal Engine"
authors = ["Omnidex Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "omnidex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "omnidex"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "derive"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system scanning
jwalk = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri integration
tauri = { version = "2.5.1", features = ["protocol-asset"] }
tauri-plugin-log = "2.4.0"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
tauri-plugin-shell = "2.2.1"
tauri-plugin-notification = "2.2.2"

# Legacy log for compatibility
log = "0.4"

# HTTP client for FAB API integration
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Web scraping for FAB marketplace
scraper = "0.20"
url = "2.5"
regex = "1.10"
rand = "0.8"

# String similarity for asset matching
strsim = "0.10"

# Secure credential storage
keyring = "2.3"

# For static initialization
lazy_static = "1.4"

# Additional stealth features
base64 = "0.21"
urlencoding = "2.1"
